--- a/res/values/arrays.xml
+++ b/res/values/arrays.xml
@@ -1246,6 +1246,9 @@
         <item>@string/statusbar_icons_filled</item>
         <item>@string/statusbar_icons_rounded</item>
         <item>@string/statusbar_icons_circular</item>
+        <item>@string/statusbar_icons_kai</item>
+        <item>@string/statusbar_icons_sam</item>
+        <item>@string/statusbar_icons_victor</item>
     </string-array>
 
     <string-array name="statusbar_icons_values">
@@ -1253,6 +1256,9 @@
         <item>2</item>
         <item>3</item>
         <item>4</item>
+        <item>5</item>
+        <item>6</item>
+        <item>7</item>
     </string-array>
 
     <string-array name="qs_header_style_titles">
