--- a/res/xml/icon_manager.xml
+++ b/res/xml/icon_manager.xml
@@ -46,6 +46,13 @@
         android:defaultValue="false" />
 
     <com.dirtyunicorns.support.preferences.SystemSettingSwitchPreference
+        settings:iconSpaceReserved="false"
+        android:key="statusbar_icons_style"
+        android:title="@string/statusbar_icons_style"
+        android:summary="@string/statusbar_icons_style_summary"
+        android:defaultValue="true" />
+
+    <com.dirtyunicorns.support.preferences.SystemSettingSwitchPreference
         android:key="toast_icon"
         android:title="@string/toast_icon_title"
         android:summary="@string/toast_icon_summary"
