Nad: Qs: Make use of app icon in NotificationHeaderViewWrapper togglable [2/2]

--- a/res/xml/quick_settings.xml
+++ b/res/xml/quick_settings.xml
@@ -70,6 +70,13 @@
             android:dependency="notification_headers"
             android:defaultValue="false" />
 
+        <com.dirtyunicorns.support.preferences.SystemSettingSwitchPreference
+            settings:iconSpaceReserved="false"
+            android:key="headers_icons_style"
+            android:title="@string/header_icons_style"
+            android:summary="@string/header_icons_style_summary"
+            android:defaultValue="true" />
+
     <PreferenceCategory
         android:key="qs_footer"
         android:title="@string/qs_footer_title" >
