--- a/res/xml/themes.xml
+++ b/res/xml/themes.xml
@@ -41,10 +41,10 @@
         android:entryValues="@array/font_type_values" />
 
     <com.dirtyunicorns.support.colorpicker.ColorPickerPreference
-        android:key="rgb_accent_picker"
-        android:title="@string/rgb_accent_picker_title"
-        android:summary="@string/rgb_accent_picker_summary"
-        android:persistent="false" />
+        android:key="accent_color"
+        android:title="@string/accent_color"
+        android:summary="@string/accent_color_summary"
+        android:persistent="false"/>
 
     <ListPreference
         android:key="theme_switch"
