--- a/res/xml/battery_options.xml
+++ b/res/xml/battery_options.xml
@@ -66,5 +66,11 @@
             android:entries="@array/status_bar_battery_percentage_entries"
             android:entryValues="@array/status_bar_battery_percentage_values"
             android:defaultValue="0" />
+
+        <com.dirtyunicorns.support.preferences.SystemSettingSwitchPreference
+            android:key="do_left_battery_text"
+            android:title="@string/left_battery_text_title"
+            android:summary="@string/left_battery_text_summary"
+            android:defaultValue="false"/>
     </PreferenceCategory>
 </PreferenceScreen>
