--- a/res/values/arrays.xml
+++ b/res/values/arrays.xml
@@ -1133,6 +1133,7 @@
         <item>@string/qs_tint_random</item>
         <item>@string/qs_tint_accent</item>
         <item>@string/qs_disco_mode</item>
+        <item>@string/qs_tint_oos</item>
     </string-array>
 
     <string-array name="qs_tint_values" translatable="false">
@@ -1140,6 +1141,7 @@
         <item>1</item>
         <item>2</item>
         <item>3</item>
+        <item>4</item>
     </string-array>
 
     <!-- QS Label Tint -->
