--- a/res/values/arrays.xml
+++ b/res/values/arrays.xml
@@ -1134,6 +1134,7 @@
         <item>@string/qs_tint_accent</item>
         <item>@string/qs_disco_mode</item>
         <item>@string/qs_tint_oos</item>
+        <item>@string/qs_tint_a12</item>
     </string-array>
 
     <string-array name="qs_tint_values" translatable="false">
@@ -1142,6 +1143,7 @@
         <item>2</item>
         <item>3</item>
         <item>4</item>
+        <item>5</item>
     </string-array>
 
     <!-- QS Label Tint -->
