--- a/res/values/arrays.xml
+++ b/res/values/arrays.xml
@@ -258,6 +258,8 @@
         <item>@string/status_bar_battery_style_circle</item>
         <item>@string/status_bar_battery_style_dotted_circle</item>
         <item>@string/status_bar_battery_style_filled_circle</item>
+        <item>@string/status_bar_battery_style_big_circle</item>
+        <item>@string/status_bar_battery_style_big_dotted_circle</item>
         <item>@string/status_bar_battery_style_text</item>
         <item>@string/status_bar_battery_style_hidden</item>
     </string-array>
@@ -268,6 +270,8 @@
         <item>3</item>
         <item>4</item>
         <item>5</item>
+        <item>8</item>
+        <item>9</item>
         <item>6</item>
         <item>7</item>
     </string-array>
