--- a/res/xml/miscellaneous.xml
+++ b/res/xml/miscellaneous.xml
@@ -67,6 +67,13 @@
            android:summary="@string/allow_signature_fake_summary"
            android:defaultValue="false" />
 
+        <!-- Unlimited google photos storage -->
+        <SwitchPreference
+            android:key="use_photos_spoof"
+            android:title="@string/use_photos_spoof_title"
+            android:summary="@string/use_photos_spoof_summary"
+            android:defaultValue="true" />
+
     <!-- Launch music player when headset is connected -->
         <com.dirtyunicorns.support.preferences.SystemSettingSwitchPreference
            android:key="headset_connect_player"
