Nad: Mn: User toggle for StreamProp [2/2]
Signed-off-by: ghou8s <ghou8s@gmail.com>

--- a/res/xml/miscellaneous.xml
+++ b/res/xml/miscellaneous.xml
@@ -80,6 +80,13 @@
             android:title="@string/use_games_spoof_title"
             android:summary="@string/use_games_spoof_summary" />
 
+        <!-- Unlock higher quality streams for specific apps -->
+        <SwitchPreference
+            android:key="use_stream_spoof"
+            android:title="@string/use_stream_spoof_title"
+            android:summary="@string/use_stream_spoof_summary"
+            android:defaultValue="true" />
+
     <!-- Launch music player when headset is connected -->
         <com.dirtyunicorns.support.preferences.SystemSettingSwitchPreference
            android:key="headset_connect_player"
